--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start": "node src/server.js",
         "start:ci": "nodemon src/server.js",
         "postbuild": "npx prisma generate --schema=src/prisma/schema.prisma",
-        "debug": "node --inspect src/server.js"
+        "debug": "node --inspect src/server.js",
+        "heroku-postbuild": "npx prisma generate --schema=src/prisma/schema.prisma"
     },
     "author": "",
     "license": "ISC",
